vp9: add superframe merging bitstream filter.

Fixes ticket 4313.